Git Master
------------------------------------------------------------------------------------------------------------------------

DOCS:
	- Updated: Preseed template file

ENGINE:
	- Fixed: Bind server impl. - Unable to handle subdomains when DNS server mode is set to 'slave'
	- Fixed: PHP allow_url_fopen feature must be explicitly enabled in composer package installer

Tickets:
	- Fixed #918: Bug - Courier - Unlimited quota doesn't works
	- Fixed #919: Bug - Preseed feature is broken - A template has not been found

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.1
------------------------------------------------------------------------------------------------------------------------

2013-09-29: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc4.1 (Fast bugfixes release)

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4
------------------------------------------------------------------------------------------------------------------------

2013-09-29: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc4

CONFIG:
	- Added specific quota warning script for Dovecot 2.x.x branch
	- Added: Packages file for Debian Jessie (testing)
	- Added: SPF Resource Record Type in bind template
	- Added: php5-imap package (required by i-MSCP frontEnd)
	- Changed: php5-mysql package to php5-mysqlnd (native driver) when available
	- Removed: php5-adodb package
	- Removed Dovecot sieve plugin configuration (Such parameter must be provided as plugin)
	- Updated: Apache templates to support 2.4.x branch
	- Updated: Dovecot configuration files

SETUP:
	- Changed: i-MSCP apache_php_fpm server impl. is now the default choice for distributions supporting it officialy
	- Fixed: Disable dummy php5_cgi Apache module if any
	- Fixed: Do not ask for SQL user host names when the SQL server is hosted locally