@@ -36,12 +36,12 @@
         {AUTHZ_ALLOW_ALL}
     </Location>
 
-   <LocationMatch ^/themes/(.*)/assets/(.*)$>
+   <LocationMatch ^/themes/.*/assets/.*$>
         Options -Indexes
         {AUTHZ_ALLOW_ALL}
     </LocationMatch>
 
-    <LocationMatch ^/(.*)/themes/(.*)/assets/(.*)$>
+    <LocationMatch ^/.*/themes/.*/assets/.*$>
         Options -Indexes
         {AUTHZ_ALLOW_ALL}
     </LocationMatch>
