@@ -3,9 +3,8 @@ RewriteEngine on
 RewriteCond %{HTTP_USER_AGENT} ^LWP::Simple
 RewriteRule ^/.* http://%{REMOTE_ADDR}/ [L,E=nolog:1]
 
-
 # Panel tools access
-RewriteRule ^/((?:ftp|pma|webmail)[\/]?)$  {BASE_SERVER_VHOST_PREFIX}{BASE_SERVER_VHOST}/$1 [L,R=301]
+RewriteRule ^/((?:ftp|pma|webmail)[\/]?)$ {BASE_SERVER_VHOST_PREFIX}{BASE_SERVER_VHOST}/$1 [L,R=301]
 
 # Log processing
 LogFormat "%v %h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" imscplog
